<resources>
    <string name="app_name">FPB App</string>
    <string name="como_fazer_login_titulo">Como fazer o seu login</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="helper_email">Aluno: numeroRA@ulife.com.br\nProfessor/Funcionário: nomeUsuario@ulife.com.br</string>
    <string name="helper_senha">Senha informada durante matrícula/cadastro</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="logo_content_description">Logo da FPB</string>
    <string name="menu_presenca">Presença</string>
    <string name="menu_localizar">Localizar</string>
    <string name="menu_mapas">Mapas FPB</string>
    <string name="menu_perfil">Perfil</string>
    <string name="nome_usuario">Fulano de Tal</string>
    <string name="perfil_content_description">Perfil</string>
    <string name="sua_proxima_aula">Sua próxima aula:</string>
    <string name="icone_disciplina">Ícone disciplina</string>
    <string name="aula_disciplina">Modelos, métodos e técnicas da engenharia de software</string>
    <string name="aula_professor">Demetrius Castro</string>
    <string name="aula_sala">A02 - Bloco A (Térreo)</string>
    <string name="marcar_presenca">Marcar presença</string>
    <string name="encontrar_salar">Encontrar sala</string>
    <string name="encontrar_professor">Encontrar professor</string>
    <string name="sair_da_conta">Sair da conta</string>
    <string name="foto_perfil">Foto de perfil</string>
    <string name="numero_ra">RA: 1234567890</string>
    <string name="acessar_ulife_salas_virtuais">Ulife Salas Virtuais</string>
    <string name="acessar_ulife_aluno">Ulife Aluno FPB</string>
    <string name="pesquisar_hint">Pesquisar sala ou laboratório…</string>
    <string name="descricao_botao_de_pesquisa">Botão de Pesquisa</string>
    <string name="identificar_sala">Identificar sala</string>
    <string name="aula_na_sala">Aula atual na sala:</string>
    <string name="icone_curso">Ícone curso</string>
    <string name="aula_curso">Ciência da Computação</string>
    <string name="selecione_o_andar_da_fpb">Selecione o andar da FPB:</string>
    <string name="mapa1">Mapa térreo</string>
    <string name="mapa2">Mapa primeiro andar</string>
    <string name="mapa3">Mapa segundo andar</string>
    <string name="content_description_botao_voltar">Botão de voltar</string>
</resources>