<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@color/laranja"
    android:paddingHorizontal="16dp">

    <View
        android:id="@+id/rectangleView"
        android:layout_width="600dp"
        android:layout_height="800dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/background_quadro"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/formulario_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/ic_logo"
                android:contentDescription="@string/logo_content_description"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/ic_logo_login"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_email"
                android:autofillHints="emailAddress"
                app:helperText="@string/helper_email"
                app:helperTextTextColor="@color/preto"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/azul">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_senha"
                android:autofillHints="password"
                app:helperText="@string/helper_senha"
                app:helperTextTextColor="@color/preto"
                app:startIconDrawable="@drawable/ic_senha"
                app:startIconTint="@color/azul"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_entrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button"
                android:padding="16dp"
                android:text="@string/entrar"
                android:textColor="@color/branco"
                app:layout_constraintTop_toBottomOf="@id/formulario_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>